INTYG-5605: Visar intygens beskrivningar i Tips&Hjälp fliken

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelManager.directive.scss
@@ -6,7 +6,7 @@ wc-support-panel-manager {
   $tab-text-color-hover: $wc-color-21;
 
   $tab-background-color: $wc-color-00;
-  $tab-background-color-hover: #E9EAED; //$wc-color-28; //TODO: variable
+  $tab-background-color-hover: $wc-color-28;
 
   $active-tab-text-color: $wc-color-19;
   $active-tab-background-color: $wc-color-15;
