--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -1,11 +1,14 @@
-<div class="tab-content-title-row">Tips och hjälprubrik</div>
+<div class="tab-content-title-row">Om intyget</div>
 
 
 
 <wc-support-panel-scrollable-body dom-id="tips-panel-scrollable-body">
 
-  <div>Här är lite tips och hjälp för {{config.intygContext.type}}.</div>
-  <p>Signerat? {{config.intygContext.isSigned}}</p>
-  <p>Skickat? {{config.intygContext.isSent}}</p>
+  <div>
+    <span class="module-title">{{vm.title}}</span><span class="module-issuer-type-id">{{vm.issuerTypeId}}</span>
+  </div>
+  <div class="module-description" ng-if="!vm.aboutMsgKey" ng-bind-html="vm.moduleDescription"></div>
+  <div class="module-description preformat" ng-if="vm.aboutMsgKey"> <span dynamic-label key="{{::vm.aboutMsgKey}}"></span></div>
+
 
 </wc-support-panel-scrollable-body>
