--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -21,9 +21,9 @@
 
     <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in ::config.fields">
       <div class="row">
-        <div class="clearfix">
+        <div class="clearfix flex-wrapper">
           <div class="col-vlg-auto col-lg-12 col-md-4 col-sm-12 checkbox-width">
-            <wc-checkbox-wrapper class="flex-wrapper">
+            <wc-checkbox-wrapper class="padding-bottom">
               <input type="checkbox" ng-model="viewstate.periods[field].checked"
                      ng-change="viewstate.updateCheckBox(field); validate()"  ng-attr-id="{{::config.modelProp + field|ueDomIdFilter}}">
               <label ng-attr-for="{{::config.modelProp + field|ueDomIdFilter}}">
