--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -34,15 +34,14 @@
         </h4>
 
         <section ng-attr-id="fmb_text_{{::section.heading}}" ng-if="section.data.text">
-          <wc-read-more-text-block text="section.data.text" max-chars="325"
-                                   class="fmb-src-text"></wc-read-more-text-block>
+          <wc-expandable-content content="section.data.text" threshold-pixel-height="80px">
+
+          </wc-expandable-content>
         </section>
 
         <section ng-attr-id="fmb_text_{{::section.heading}}_list" ng-if="section.data.list">
           <ul class="fmb-bullet-list" ng-repeat="bullet in section.data.list track by $index">
-            <li ng-attr-id="fmb_bullet_{{::section.heading}}_{{$index}}"><wc-read-more-text-block text="bullet"
-                                                                                                  max-chars="325"
-                                                                                                  class="fmb-src-text"></wc-read-more-text-block></li>
+            <li ng-attr-id="fmb_bullet_{{::section.heading}}_{{$index}}" ng-bind-html="bullet"></li>
           </ul>
         </section>
 
