--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss
@@ -38,4 +38,8 @@
   .dropdown-row {
     min-width: 139px;
   }
+
+  INPUT.validation-error, wc-dropdown.validation-error .dropdown-label {
+    border: 1px solid $wc-color-11;
+  }
 }
