--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -1,3 +1,4 @@
+<div class="ue-diagnos">
 <div class="row bottom-padding-small checkbox-wrapper">
     <div class="bottom-padding-small col-xs-12"><span class="choose-code" dynamic-label key="common.sit.label.valj-version-icd-10"></span></div>
     <div class="padding-left">
@@ -21,7 +22,7 @@
     </div>
 </div>
 
-<ng-form name="diagnosForm" class="ueDiagnos">
+<ng-form name="diagnosForm" class="diagnos-wrapper">
     <span class="diagnos-text" dynamic-label key="{{::config.diagnosKodLabel}}"></span>
     <table class="margin-top">
         <tr>
@@ -92,3 +93,4 @@
     </table>
     <ue-validation-list field-type="{{config.type}}" validations="diagnosValidations"></ue-validation-list>
 </ng-form>
+</div>
