INTYG-5637: Rättar HTML markup för minaintyg-link som NORMAL

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
@@ -40,7 +40,7 @@
       Vid signering övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det till
       Intygstjänsten</p>
     <p>Så fort ett intyg är skickat till intygstjänsten är det tillgängligt för invånaren via
-      <span dynamiclink="minaintyg"></span>, med undantag för dödsbevis och dödsorsaksintyg som aldrig tillgängliggörs
+      <span dynamiclink key="minaintyg"></span>, med undantag för dödsbevis och dödsorsaksintyg som aldrig tillgängliggörs
       på Mina intyg.</p>
     <p>
       Ett signerat intyg kan inte ändras eller raderas, däremot kan ett intyg ersättas av ett nytt intyg.
