--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
@@ -6,5 +6,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .complete-info {
+      wc-toggle {
+        vertical-align: middle;
+      }
+
+      label {
+        margin-bottom: 0;
+        padding-left: 5px;
+        font-weight: normal;
+        cursor: pointer;
+      }
+    }
   }
 }
