--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/flex-app-layout.scss
@@ -51,7 +51,13 @@ body {
   //defines padding for "page" workarea containers
   .webcert-workarea-page {
     //NOTE: Minimum of 15 padding left/right is needed to handle bootstrap grid negative margins
-    padding: 20px 15px 30px 15px;
+    padding: 20px 15px 0 15px;
+
+    &:after {
+      content:'';
+      display:block;
+      padding-bottom:35px;
+    }
 
     &.container-fluid {
       //all "page-templates" / views such as sök / skriv intyg, ej signerade utkast etc should also have this as root, to get inner vertical scrollbar
@@ -80,8 +86,14 @@ body {
       position: relative; //important: needs to be relative for anchorScroll to work
       flex: 3;
       overflow-y: auto;
-      padding: 20px 15px 30px 15px;
+      padding: 20px 15px 0 15px;
       background-color: $wc-color-27;
+
+      &:after {
+        content:'';
+        display:block;
+        padding-bottom:35px;
+      }
     }
     .webcert-workarea-supportpanel {
       flex: 2;
