INTYG-5345: Tog bort padding på sista raden av diagnoser.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss
@@ -49,6 +49,9 @@ ue-diagnos {
     }
     table.margin-top {
       margin-top: 10px;
+      tbody tr:last-of-type td{
+        padding-bottom: 0;
+      }
     }
 
     .diagnos-loading {
