INTYG-5304: Styling - padding, icon, colors, buttons

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -65,6 +65,7 @@ $black_12: rgba(0, 0, 0, 0.12);
 $black_20: rgba(0, 0, 0, 0.2);
 $black_75: rgba(0, 0, 0, 0.75);
 $black_30: rgba(0, 0, 0, 0.3);
+$black_24: rgba(0, 0, 0, 00.24);
 
 //urls
 $url_0: url(/img/tillbaka.png);
