INTYG-5496: Lagt till label stöd i wcToggle

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.html
@@ -3,3 +3,6 @@
   <span class="slider round"></span>
 </label>
 
+<label ng-if="::label" for="{{::toggleId}}" class="toggle-label">
+  {{::label}}
+</label>
