--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcToggle/wcToggle.directive.scss
@@ -6,7 +6,8 @@ wc-toggle {
 
   .switch {
     position: relative;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     width: $width;
     height: $height;
     margin-bottom: 0;
@@ -14,6 +15,13 @@ wc-toggle {
     input {
       opacity: 0.01; //Important: 0.01 is not practically visible, but if we set it to 0, protractor won't find it..
     }
+  }
+
+  .toggle-label {
+    margin-bottom: 0;
+    padding-left: 5px;
+    font-weight: normal;
+    cursor: pointer;
   }
 
   .slider {
