--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
@@ -1,5 +1,5 @@
 <div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()" class="wc-help-chevron__margin-bottom wc-help-chevron__arrow_box">
-  <wc-help-chevron-text-scrollable-body>
+  <wc-bottom-fadeout color="28" class="wc-help-chevron__textarea">
     <span ng-bind-html="text"></span>
-  </wc-help-chevron-text-scrollable-body>
+  </wc-bottom-fadeout>
 </div>
