--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -38,3 +38,9 @@
 .wc-help-chevron__margin-bottom {
    margin-bottom: 15px;
  }
+.wc-help-chevron__textarea {
+  .scrollable-body {
+    padding: 20px;
+    max-height: 120px;
+  }
+}
