--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueKategori/ueKategori.directive.scss
@@ -32,6 +32,10 @@ ue-kategori {
   }
 
   .card {
-    padding-bottom: 28px;
+    padding-bottom: 14px;
+  }
+
+  .ue-kategori__body {
+    padding-top: 14px;
   }
 }
