--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcAlertMessage/wcAlertMessage.directive.html
@@ -5,6 +5,7 @@
     <i ng-switch-when="sekretess" class="material-icons">security</i>
     <i ng-switch-when="danger" class="material-icons">warning</i>
     <i ng-switch-when="success" class="material-icons">check</i>
+    <i ng-switch-when="komplettering" class="icon-wc-ikon-alert02 icon-wc-18"></i>
   </div>
   <span dynamic-label key="{{alertMessageId}}" class="multiline"></span>
   <ng-transclude></ng-transclude>
