--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcBottomFadeout/wcBottomFadeout.directive.scss
@@ -17,24 +17,15 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-
-wc-help-chevron-text-scrollable-body {
+wc-bottom-fadeout {
 
   $wc-text-fadeout-height: 30px;
 
+  display: block;
   position: relative;
-  display: flex;
-  flex: 1;
-  max-height: 120px;
-  min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-  color: $wc-color-07;
-  background-color: $wc-color-28;
-  border-radius: 2px;
 
-  .tab-content-scrollable-body {
-    padding: 20px;
-    flex: 1;
-    overflow: auto;
+  .scrollable-body {
+    overflow-y: auto;
   }
 
   //absolutely positioned element with a gradient background.
@@ -49,11 +40,16 @@ wc-help-chevron-text-scrollable-body {
     pointer-events: none;
 
     div {
-      //background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 60%);
-      background-image: linear-gradient(to top, #e9eaed 0%, rgba(255, 255, 255, 0) 100%);
+      background-image: linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
       width: 100%;
       height: 100%;
       pointer-events: none;
+    }
+    &.wc-color-02 div {
+      background-image: linear-gradient(to top, rgba($wc-color-02, 1) 0%, rgba($wc-color-02, 0) 100%);
+    }
+    &.wc-color-28 div {
+      background-image: linear-gradient(to top, rgba($wc-color-28, 1) 0%, rgba($wc-color-28, 0) 100%);
     }
   }
 }
