--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss
@@ -2,9 +2,9 @@ ue-fraga {
   display: block;
 
   .ue-fraga {
-    padding: 28px 28px 0 28px;
+    padding: 14px 28px 14px 28px;
     &.no-label-padding {
-      padding-top: 14px;
+      padding-top: 0px;
     }
   }
 
