--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueRenderComponents.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueRenderComponents.directive.scss
@@ -1,5 +1,5 @@
 /*!
- * Copyright (C) 2017 Inera AB (http://www.inera.se)
+ * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -17,15 +17,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-wc-fraga-komplettering {
-
-  .komplettering-active {
-    border: 1px solid $wc-color-05;
-    border-radius: 4px;
-  }
-
-  wc-inline-komplettering .alert {
-    margin: 14px 0 0 0;
-  }
-
+ue-render-components {
+    display: block;
 }
