INTYG-5614: Inline headers (patientheader, utkasheader, intygheader) skall följa samma maxwidth 1440 regler som sidheader/menyn. Även lagat boxshadow på headers

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/intyg/intyg.html
@@ -1,6 +1,6 @@
 
 <div ui-view="header"></div>
-<div class="webcert-workarea-hflex-container">
+<div class="webcert-workarea-hflex-container centered-constrained-content">
 
 
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid" ng-show="!viewState.common.activeErrorMessageKey">
