--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.scss
@@ -37,6 +37,7 @@ wc-header-help {
       display: flex;
       justify-content: center;
       padding: 0 8px;
+      border-right: none;
 
     }
 
