--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcRadioWrapper/wcRadioWrapper.directive.scss
@@ -33,6 +33,7 @@ wc-radio-wrapper {
       border: 1px solid $wc-color-23;
       box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.24);
       transition: all .3s;
+      background-color: $wc-color-00;
     }
 
     //determines foreground layer of visual checkbox (and tick mark)
