--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -1,7 +1,7 @@
 <div ui-view="header"></div>
 
 
-<div class="webcert-workarea-hflex-container">
+<div class="webcert-workarea-hflex-container centered-constrained-content">
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-bas-ns weak-hidden"
        ng-class="{show: viewState.common.showTemplate}">
     <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
