--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
@@ -1,7 +1,7 @@
-<div ui-view="header"></div>
+<div ui-view="header" class="intyg-header-container"></div>
 
 
-<div class="webcert-workarea-hflex-container">
+<div class="webcert-workarea-hflex-container centered-constrained-content">
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-diabetes-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
     <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
 
