--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss
@@ -35,6 +35,7 @@ wc-checkbox-wrapper {
       border: 1px solid $wc-color-23;
       box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.24);
       transition: all .3s;
+      background-color: $wc-color-00;
 
     }
 
