--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.scss
@@ -9,9 +9,15 @@ wc-support-panel-scrollable-body {
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
 
   .tab-content-scrollable-body {
-    padding: 20px;
+    padding: 20px 20px 0 20px;
     flex: 1;
     overflow: auto;
+    //Bottom padding hack since IE does not respect padding-bottom
+    &::after {
+      content: "";
+      display: block;
+      padding-bottom: 20px;
+    }
   }
 
   //absolutely positioned element with a gradient background.
