--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -46,7 +46,7 @@
                     <input type="text" class="col-xs-11 form-control" ng-attr-id="diagnoseCode-{{::$index|ueDomIdFilter}}"
                            name="diagnoseCode{{::$index}}"
                            value=""
-                           placeholder="{{$index == 0 ? 'Huvuddiagnos' : 'Bidiagnos'}}"
+                           placeholder="{{$index == 0 ? 'Kod' : 'Diagnos'}}"
                            ng-class="{'validation-error' : hasValidationError('diagnoskod', $index)}"
                            ng-model="diagnos.diagnosKod"
                            ng-change="onDiagnoseCodeChanged($index)"
