--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -46,7 +46,7 @@
                     <input type="text" class="col-xs-11 form-control" ng-attr-id="diagnoseCode-{{::$index|ueDomIdFilter}}"
                            name="diagnoseCode{{::$index}}"
                            value=""
-                           placeholder="{{$index == 0 ? 'Kod' : 'Diagnos'}}"
+                           placeholder="Kod"
                            ng-class="{'validation-error' : hasValidationError('diagnoskod', $index)}"
                            ng-model="diagnos.diagnosKod"
                            ng-change="onDiagnoseCodeChanged($index)"
@@ -79,7 +79,7 @@
                        ng-class="{'validation-error' : hasValidationError('diagnosbeskrivning', $index)}"
                        name="diagnose.description"
                        value=""
-                       placeholder=""
+                       placeholder="Diagnos"
                        ng-model= "diagnos.diagnosBeskrivning"
                        ng-blur="validate()"
                        ng-change="onDiagnoseDescriptionChanged($index)"
